--- a/Greater_Sydney_Dam_Levels/readme.Rmd
+++ b/Greater_Sydney_Dam_Levels/readme.Rmd
@@ -6,15 +6,15 @@ editor_options:
   markdown: 
     wrap: sentence
 ---
+
 ## Welcome to the Greater Sydney Dam Levels Daily Data Scraper
 
 This product is currently:
 
 [![damlevel_scrape.r](https://github.com/snazzyandy/Modelling-and-EDA/actions/workflows/greatersydscraper.yml/badge.svg)](https://github.com/snazzyandy/Modelling-and-EDA/actions/workflows/greatersydscraper.yml)
 
-
-
 ## What Can we learn from the most recent readings
+
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 library(dplyr)
@@ -25,6 +25,7 @@ library(stringr)
 library(zoo)
 
 ```
+
 ```{r dataprep, include=FALSE}
 #Global Variables
 #Dataframe for the last week
@@ -246,8 +247,8 @@ Yesterdays_Forecast_Graph_data <-Yesterdays_Forecast |>
            `Date Type` == "Collection_Date" & Dam_level_range == "daily_value" ) |>
     rbind(Historic_dataset) |>
   #Adding levels so that i can match the colours in the charts
-  mutate(`Forecast Type` = factor(`Forecast Type`)) |>
-  mutate(`Forecast Type` = fct_recode(`Forecast Type`, Forecast_levels))
+  mutate(`Forecast Type` = factor(`Forecast Type`))# |>
+#  mutate(`Forecast Type` = fct_recode(`Forecast Type`, Forecast_levels))
 
   
 #Plot series to show the forecasts by dam
@@ -297,18 +298,16 @@ You used to be able to get all the daily historic data output as a csv, now you 
 As a policy maker hes very interested in the daily releases of dam levels as a historic dataset.
 Rather than him visiting the site each day and recording the data manually I wrote this basic script with github actions to scrape the site every day then kick it out as a csv.
 
-
 The data we are borrowing is from [this page on Water NSW's site](https://www.waternsw.com.au/nsw-dams/nsw-storage-levels/greater-sydney-dam-levels)!
 ![Image](Images/WNSWScreenshot.png)
 
 ## Why Not use water insights?
-[The WNSW app Water insights](https://waterinsights.waternsw.com.au/12964-sydney-drinking-water-catchment/#!) is a great product for most users but doesnt solve my daily data point query. Instead it offers weekly, monthly and yearly data series. For those looking for longitudinal data this is very useful!
 
+[The WNSW app Water insights](https://waterinsights.waternsw.com.au/12964-sydney-drinking-water-catchment/#!) is a great product for most users but doesnt solve my daily data point query.
+Instead it offers weekly, monthly and yearly data series.
+For those looking for longitudinal data this is very useful!
 
 ## Where can i access the data?
 
 All these daily data extracts are available in the data folder.
 Open sourcing (MIT Licence) for those who are interested #OpenData!
-
-
-
