--- a/Greater_Sydney_Dam_Levels/readme.Rmd
+++ b/Greater_Sydney_Dam_Levels/readme.Rmd
@@ -78,8 +78,9 @@ Forecast_levels    <-   c("Estimated_Day_zero_daily_depletion_rate",
 
 
 #Data From scraped files
-all_readings <- read.csv("Daily_Dam_Readings_Greater_Sydney.csv") 
-#removed mutate collection date
+all_readings <- read.csv("Daily_Dam_Readings_Greater_Sydney.csv") |>                     
+                mutate(Collection_Date = date(Collection_Date))
+
 
 #Scraper performance over teh last week
 disinct_readings_count <- all_readings |> 
